# hamlib-tci-sidecar

./: .gitignore  LICENSE  MANIFEST.in  PROTOCOL.md  README.md  js8_tx_test.py  monitor_tx.py  pyproject.toml  requirements.txt  tci-audio-gr-sidecar.py  tci-audio-gr-tester.py  tci-audio-soundcard-sidecar.py  tci-iq-sidecar.py  tci-iq-viewer.py  tci-sidecar-linux.py  tci.sh  test_audio_simple.py  test_tx.py
